--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
 						<button class="btn btn-primary">Generate Notify</button>
 					</div>
 				</div>
-				<form>
+				</form>
 
 					<h1 id="documentation">Documentation</h1>
-					<p>Please make sure to read the documenation it exlains how to use this plugin and points out common mistakes people tend to make. It will also give you examples on how to use this plugin.</p>
+					<p>Please make sure to read the documentation it explains how to use this plugin and points out common mistakes people tend to make. It will also give you examples on how to use this plugin.</p>
 
 					<p>Please feel free to make improvements by forking the plugin and making a <a href="https://github.com/w8tcha0/bootstrap-notify/pulls" target="_blank">pull request</a>. Lastly, if you do find an issue with the plugin please report it on the github <a href="https://github.com/w8tcha/bootstrap-notify/issues" target="_blank">issues</a> page.
 
@@ -394,7 +394,7 @@
 					<div class=" clearfix "></div>
 
 					<h2 id="documentation-default-template">Default Template Setup</h2>
-					<p>Bootrstrap Notify uses data attributes (<em><code>data-notify</code></em>) to place content with in the notification template.</p>
+					<p>Bootstrap Notify uses data attributes (<em><code>data-notify</code></em>) to place content with in the notification template.</p>
 					<ul>
 						<li><code>container</code>: Container of notification element</li>
 						<li><code>dismiss</code>: Element used to allow user to manually close notification</li>
@@ -765,9 +765,9 @@
 	<button class="btn btn-outline-primary btn-sm btn-scroll"><i class="fa fa-angle-double-up fa-fw"></i>
 	</button>
 	<!-- Core JavaScript -->
-
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="js/bootstrap-notify.min.js"></script>
+	
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="js/bootstrap-notify.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
 	<script src="js/app.js"></script>
